--- a/static/style.css
+++ b/static/style.css
@@ -255,3 +255,13 @@ p.welcome{
 .addbutton:hover{
   background-color: rgba(255,255,255,0.5);
 }
+.gm-style .gm-style-iw {
+         background-color: #3C61AD !important;
+         top: 0 !important;
+         left: 0 !important;
+         width: 100% !important;
+         height: 100% !important;
+         min-height: 120px !important;
+         padding-top: 10px;
+         display: block !important;
+}
