--- a/static/style.css
+++ b/static/style.css
@@ -264,7 +264,7 @@ p.welcome{
 .moreInfo:hover{
   background-color: rgba(52, 73, 94,0.7);
 }
-h1.header{
-  background-color: rgba(100,100,100,0.1);
-  width: 100%;
+h1.header, h2.header{
+  padding:0;
+  margin:0;
 }
