more style infobuubb

--- a/static/style.css
+++ b/static/style.css
@@ -269,8 +269,8 @@ h1.header, h2.header{
   margin:0;
 }
 h1.header{
-  color:#16a085;
+  color:#2c3e50;
 }
 h2.header{
-  color:#2ecc71;
+  color:#d35400;
 }
